--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   "homepage": "https://github.com/badosz0/mike#readme",
   "dependencies": {
     "discord.js": "^11.5.1",
+    "moment": "^2.24.0",
+    "moment-duration-format": "^2.3.2",
     "rethinkdb": "^2.3.3"
   }
 }
