--- a/package.json
+++ b/package.json
@@ -18,8 +18,14 @@
   "homepage": "https://github.com/badosz0/mike#readme",
   "dependencies": {
     "discord.js": "^11.5.1",
+    "ejs": "^2.6.1",
+    "express": "^4.17.1",
+    "express-session": "^1.16.1",
+    "memorystore": "^1.6.1",
     "moment": "^2.24.0",
     "moment-duration-format": "^2.3.2",
+    "passport": "^0.4.0",
+    "passport-discord": "^0.1.3",
     "rethinkdb": "^2.3.3"
   }
 }
