--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/badosz0/mike#readme",
   "dependencies": {
     "discord.js": "^11.5.1",
+    "discord.js-lavalink": "^2.2.2",
     "ejs": "^2.6.1",
     "express": "^4.17.1",
     "express-session": "^1.16.1",
