--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   },
   "homepage": "https://github.com/badosz0/mike#readme",
   "dependencies": {
+    "canvas": "^2.5.0",
+    "cheerio": "^1.0.0-rc.3",
     "discord.js": "^11.5.1",
     "discord.js-lavalink": "^2.2.2",
     "ejs": "^2.6.1",
