--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "canvas": "^2.5.0",
     "cheerio": "^1.0.0-rc.3",
+    "colors": "^1.3.3",
     "discord.js": "^11.5.1",
     "discord.js-lavalink": "^2.2.2",
     "ejs": "^2.6.1",
