--- a/package.json
+++ b/package.json
@@ -30,6 +30,9 @@
     "moment-duration-format": "^2.3.2",
     "passport": "^0.4.0",
     "passport-discord": "^0.1.3",
-    "rethinkdb": "^2.3.3"
+    "pokedex-api": "^1.1.2",
+    "rethinkdb": "^2.3.3",
+    "steam-provider": "^0.3.2",
+    "weather-js": "^2.0.0"
   }
 }
