--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "ejs": "^2.6.1",
     "express": "^4.17.1",
     "express-session": "^1.16.1",
+    "image-type": "^4.1.0",
     "memorystore": "^1.6.1",
     "moment": "^2.24.0",
     "moment-duration-format": "^2.3.2",
