--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "pokedex-api": "^1.1.2",
     "rethinkdb": "^2.3.3",
     "steam-provider": "^0.3.2",
+    "twemoji": "^12.0.4",
     "weather-js": "^2.0.0"
   }
 }
