--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "canvas": "^2.5.0",
     "cheerio": "^1.0.0-rc.3",
     "colors": "^1.3.3",
+    "cowsay": "^1.4.0",
     "discord.js": "^11.5.1",
     "discord.js-lavalink": "^2.2.2",
     "ejs": "^2.6.1",
