--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "memorystore": "^1.6.1",
     "moment": "^2.24.0",
     "moment-duration-format": "^2.3.2",
+    "noblox.js": "^4.2.6",
     "passport": "^0.4.0",
     "passport-discord": "^0.1.3",
     "pokedex-api": "^1.1.2",
