--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/badosz0/mike#readme",
   "dependencies": {
+    "Base64": "^1.0.2",
     "canvas": "^2.5.0",
     "cheerio": "^1.0.0-rc.3",
     "colors": "^1.3.3",
