--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 files/dashboards.json
 files/databases.json
 files/lavalink.json
+files/roles.json
 files/tokens.json
 node_modules/
 package-lock.json
