--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/badosz0/mike#readme",
   "dependencies": {
     "Base64": "^1.0.2",
+    "ascii-table": "0.0.9",
     "canvas": "^2.5.0",
     "cheerio": "^1.0.0-rc.3",
     "colors": "^1.3.3",
