--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "moment": "^2.24.0",
     "moment-duration-format": "^2.3.2",
     "noblox.js": "^4.2.6",
+    "node-spotify-api": "^1.1.1",
     "passport": "^0.4.0",
     "passport-discord": "^0.1.3",
     "pokedex-api": "^1.1.2",
