--- a/package.json
+++ b/package.json
@@ -38,9 +38,11 @@
     "passport": "^0.4.0",
     "passport-discord": "^0.1.3",
     "pokedex-api": "^1.1.2",
+    "qrcode": "^1.4.1",
     "rethinkdb": "^2.3.3",
     "steam-provider": "^0.3.2",
-    "twemoji": "^12.0.4",
+    "tempy": "^0.3.0",
+    "twemoji": "^12.1.2",
     "weather-js": "^2.0.0"
   }
 }
